--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 body {
     margin: 0;
     text-align: center;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 13px;
+    font-family: "Courier New", Courier, monospace;
+    font-size: 16px;
 }
 
 /* Toolbar */
-div.header{
+div.header {
     margin: 0;
     padding: 0;
     width: 28%;
@@ -18,7 +18,7 @@ div.header{
 
 div.brand {
     margin: 0;
-    padding: 0.25em;
+    padding: 1em;
     background-color: yellow;
 }
 
@@ -32,24 +32,50 @@ div.brand h1 small {
 }
 
 div.toolbar {
-    margin: 0;
+    margin: 1em 0 0;
     padding: 0;
 }
 
-div.canvas,
-div.canvas-tool,
-div.palette,
-div.palette-tool {
-}
-
-
 div.canvas h2,
 div.palette h2 {
-   font-size: 1em;
-   margin: 0;
-   padding: 2px;
-
+    margin: 0;
+    padding: 0;
+    font-size: 1.1em;
 }
+
+
+/* Form inputs */
+div.canvas-tool label {
+    font-size: 1.1em;
+}
+
+div.canvas-tool input[type=number] {
+    width: 2em;
+    font-size: 1.2em;
+    padding: 3px;
+    border: 1px solid #ccc;
+}
+
+div.canvas-tool input[type=submit] {
+    background-color: #000;
+    border: 1px solid #ccc;
+    font-family: "Courier New", Courier, monospace;
+    color: white;
+    padding: 4px;
+    font-size: 1.2em;
+    cursor: pointer;
+}
+
+div.palette-tool input[type=color] {
+    padding: 0;
+    width: 31px;
+    height: 31px;
+    position: absolute;
+    margin-top: -21px;
+    border: 1px solid #ccc;
+    cursor: pointer;
+}
+
 
 
 /* Content */
@@ -68,10 +94,10 @@ div.content table {
     margin: 0 auto;
 }
 
-h3 {
-    position: inherit;;
+div.content h3 {
     font-family: 'Press Start 2P', cursive;
-    font-size: 1em;
+    font-size: 1.1em;
+    line-height: 1.5em;
 }
 
 div.content table,
@@ -89,35 +115,6 @@ div.content td {
 }
 
 
-/* Form inputs */
-div.canvas-tool input[type=number] {
-    width: 2em;
-    font-size: 1.1em;
-    padding: 2px;
-    border: 1px solid #ccc;
-}
-
-div.canvas-tool input[type=submit] {
-    background-color: #000;
-    border: 1px solid #ccc;
-    color: white;
-    letter-spacing: 0.1em;
-    margin-left: 0.2em;
-    padding: 0.2em 0.5em;
-    font-size: 1em;
-    cursor: pointer;
-}
-
-div.palette-tool input[type=color] {
-    padding: 0;
-    width: 31px;
-    height: 31px;
-    position: absolute;
-    margin-top: -23px;
-    border: 1px solid #ccc;
-    cursor: pointer;
-}
-
 
 /* Display on different screen sizes  */
 @media screen and (min-width: 971px) {
@@ -125,23 +122,23 @@ div.palette-tool input[type=color] {
     div.canvas-tool,
     div.palette,
     div.palette-tool {
-        display: inline;
+        width: 100%;
     }
 
     div.canvas h2 {
-        margin: 3em 0 1.5em;
+        margin: 3em 0 2em;
     }
 
     div.palette h2  {
-        margin: 2em 0;
+        margin: 1.5em;
     }
 
     div.palette-tool input[type=color] {
         position: relative;
         width: 62px;
         height: 62px;
+        margin: 4em 0 1em;
     }
-
 }
 
 @media screen and (max-width: 970px) {
@@ -161,16 +158,16 @@ div.palette-tool input[type=color] {
     div.palette,
     div.palette-tool {
         display: inline-block;
-        margin-right: 1em;
+        margin-right: 0.5em;
     }
 
-    div.canvas, div.palette {
-        margin-top: 1em;
+    div.palette h2 {
+        margin-left: 40px;
     }
 
     div.canvas-tool input[type=submit],
     div.canvas-tool input[type=number] {
-        margin-right: 0.5em;
+        margin-left: 0.3em;
     }
 }
 
@@ -179,16 +176,22 @@ div.palette-tool input[type=color] {
     div.canvas-tool,
     div.palette,
     div.palette-tool {
-        display: inline;
+        width: 100%;
     }
 
-    div.canvas h2,
+    div.canvas h2 {
+        margin: 1em 0 1em 0;
+    }
+
     div.palette h2 {
-        margin: 1em;
+        margin: 0.5em 0 0.5em 0;
     }
 
     div.palette-tool input[type=color] {
         position: relative;
+        margin-top: 1.5em;
+        width: 45px;
+        height: 45px;
     }
 
 }
