--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 /* Import Google Fonts */
 @import url("https://fonts.googleapis.com/css?family=Open+Sans|Press+Start+2P");
 
@@ -42,22 +41,6 @@ body {
     margin: 0;
 }
 
-.toolbar {
-
-}
-
-.toolbar form {
-
-}
-
-.toolbar form .canvas-tool {
-
-}
-
-.palette-tool {
-
-}
-
 .canvas-tool input[type=number],
 .canvas-tool input[type=submit],
 .canvas-tool label.select-color {
@@ -80,9 +63,20 @@ body {
 
 .palette-tool input[type=color] {
     padding: 0;
+    border: none;
     margin-top: 15px;
     border: 1px solid #ccc;
+    background-color: #ccc;
     cursor: pointer;
+}
+
+.palette-tool input[type=color]::-webkit-color-swatch-wrapper {
+      padding: 0;
+    height: 28px;
+}
+
+.palette-tool input[type=color]::-webkit-color-swatch {
+      border: 0;
 }
 
 /* Page content */
@@ -135,7 +129,7 @@ body {
     .toolbar {
         width: 55%;
         margin-left: 30%;
-        padding-top: 30px;
+        padding: 30px 0;
     }
 
     .canvas-tool input[type=submit] {
@@ -149,6 +143,11 @@ body {
     .palette-tool input[type=color] {
         width: 142px;
         height: 70px;
+    }
+
+    .palette-tool input[type=color]::-webkit-color-swatch-wrapper {
+      width: 140px;
+      height: 70px;
     }
 
     /* Page content */
@@ -212,8 +211,8 @@ body {
     }
 
     .palette-tool input[type=color] {
-        height: 34px;
         width: 34px;
+        height: 34px;
     }
 
     /* Page content */
@@ -261,11 +260,17 @@ body {
         width: 33px;
     }
 
+    .palette-tool input[type=color]::-webkit-color-swatch-wrapper {
+          padding: 0;
+        height: 27px;
+    }
+
     /* Page content */
     .content h3 {
         font-size: 0.9em;
     }
 }
+
 
 
 /* CSS style guide http://udacity.github.io/frontend-nanodegree-styleguide/css.html */
